journal/journal.ctx_TXT002/main--ThinkPad_x395--v3_(manjaro)--network--iptables--avait_pourtant_ete_set_la_veille_208.txt
###### avait pourtant ete set la veille
ss | tail

icmp6 UNCONN 0       0                                                             *:
ipv6-icmp                                                   *:*                       
udp   ESTAB  0       0                                           192.168.1.72%wlp3s0:
bootpc                                            192.168.1.1:bootps                  
tcp   ESTAB  0       0                                                  192.168.1.72:
38650                                           140.82.113.26:https                   
tcp   ESTAB  0       0                                                  192.168.1.72:
40744                                           34.107.243.93:https                   
tcp   ESTAB  0       0                      [2a02:8428:2409:6701:5550:86eb:396d:546]:
42038                                     [2a04:4e42:6a::223]:https                   
 
presk0@ordi-241026-19:31:33-~/machine 
=> sudo iptables-save 
[sudo] password for presk0:  
# Generated by iptables-save v1.8.10 on Sat Oct 26 19:31:58 2024 
*nat 
:PREROUTING ACCEPT [583:82170] 
:INPUT ACCEPT [555:72930] 
:OUTPUT ACCEPT [7941:566302] 
:POSTROUTING ACCEPT [7941:566302] 
:DOCKER - [0:0] 
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER 
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER 
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE 
-A POSTROUTING -s 172.18.0.0/16 ! -o br-ebb94ae6c3bb -j MASQUERADE 
-A DOCKER -i docker0 -j RETURN 
-A DOCKER -i br-ebb94ae6c3bb -j RETURN 
COMMIT 
# Completed on Sat Oct 26 19:31:58 2024 
# Generated by iptables-save v1.8.10 on Sat Oct 26 19:31:58 2024 
*filter 
:INPUT ACCEPT [61442:58005531] 
:FORWARD DROP [0:0] 
:OUTPUT ACCEPT [54158:10573326] 
:DOCKER - [0:0] 
:DOCKER-ISOLATION-STAGE-1 - [0:0] 
:DOCKER-ISOLATION-STAGE-2 - [0:0] 
:DOCKER-USER - [0:0] 
-A FORWARD -j DOCKER-USER 
-A FORWARD -j DOCKER-ISOLATION-STAGE-1 
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -o docker0 -j DOCKER 
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT 
-A FORWARD -i docker0 -o docker0 -j ACCEPT 
-A FORWARD -o br-ebb94ae6c3bb -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -o br-ebb94ae6c3bb -j DOCKER 
-A FORWARD -i br-ebb94ae6c3bb ! -o br-ebb94ae6c3bb -j ACCEPT 
-A FORWARD -i br-ebb94ae6c3bb -o br-ebb94ae6c3bb -j ACCEPT 
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2 
-A DOCKER-ISOLATION-STAGE-1 -i br-ebb94ae6c3bb ! -o br-ebb94ae6c3bb -j DOCKER-ISOLATI
ON-STAGE-2 
-A DOCKER-ISOLATION-STAGE-1 -j RETURN 
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP 
-A DOCKER-ISOLATION-STAGE-2 -o br-ebb94ae6c3bb -j DROP 
-A DOCKER-ISOLATION-STAGE-2 -j RETURN 
-A DOCKER-USER -j RETURN 
COMMIT 
# Completed on Sat Oct 26 19:31:58 2024 

 
 
presk0@ordi-241026-19:32:52-~/machine 
=> sudo ./networking/iptables_script.sh -f networking/ip_to_ban.txt -r -s 
RESET=yes 
SIMPLE=yes 
FILE_IN=networking/ip_to_ban.txt 
UPDATE=yes 
 
presk0@ordi-241026-19:33:01-~/machine 
=> sudo iptables-save 
# Generated by iptables-save v1.8.10 on Sat Oct 26 19:33:05 2024 
*security 
:INPUT ACCEPT [0:0] 
:FORWARD ACCEPT [0:0] 
:OUTPUT ACCEPT [0:0] 
COMMIT 
# Completed on Sat Oct 26 19:33:05 2024 
# Generated by iptables-save v1.8.10 on Sat Oct 26 19:33:05 2024 
*raw 
:PREROUTING ACCEPT [0:0] 
:OUTPUT ACCEPT [0:0] 
COMMIT 
# Completed on Sat Oct 26 19:33:05 2024 
# Generated by iptables-save v1.8.10 on Sat Oct 26 19:33:05 2024 
*mangle 
:PREROUTING ACCEPT [0:0] 
:INPUT ACCEPT [0:0] 
:FORWARD ACCEPT [0:0] 
:OUTPUT ACCEPT [0:0] 
:POSTROUTING ACCEPT [0:0] 
COMMIT 
# Completed on Sat Oct 26 19:33:05 2024 
# Generated by iptables-save v1.8.10 on Sat Oct 26 19:33:05 2024 
*nat 
:PREROUTING ACCEPT [584:82202] 
:INPUT ACCEPT [556:72962] 
:OUTPUT ACCEPT [7950:566836] 
:POSTROUTING ACCEPT [7950:566836] 
COMMIT 
# Completed on Sat Oct 26 19:33:05 2024 
# Generated by iptables-save v1.8.10 on Sat Oct 26 19:33:05 2024 
*filter 
:INPUT DROP [0:0] 
:FORWARD DROP [0:0] 
:OUTPUT ACCEPT [0:0] 
:logdrop - [0:0] 
-A INPUT -s 134.0.192.0/20 -j logdrop 
-A INPUT -s 37.59.32.0/19 -j logdrop 
-A INPUT -s 151.101.0.0/16 -j logdrop 
-A INPUT -s 35.0.0.0/8 -j logdrop 
-A INPUT -s 34.0.0.0/8 -j logdrop 
-A INPUT -s 35.0.0.0/8 -j logdrop 
-A INPUT -s 34.0.0.0/8 -j logdrop 
-A INPUT -p icmp -j logdrop 
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -j logdrop 
-A OUTPUT -d 134.0.192.0/20 -j logdrop 
-A OUTPUT -d 37.59.32.0/19 -j logdrop 
-A OUTPUT -d 151.101.0.0/16 -j logdrop 
-A OUTPUT -d 35.0.0.0/8 -j logdrop 
-A OUTPUT -d 34.0.0.0/8 -j logdrop 
-A OUTPUT -d 35.0.0.0/8 -j logdrop 
-A OUTPUT -d 34.0.0.0/8 -j logdrop 
-A logdrop -m limit --limit 15/min --limit-burst 50 -j NFLOG --nflog-prefix "logdrop:
 " 
-A logdrop -j DROP 
COMMIT 
# Completed on Sat Oct 26 19:33:05 2024 
 
presk0@ordi-241026-19:33:05-~/machine 
=> sudo grep -E "3[45]" /etc/iptables 
iptables/       iptables.rules   
 
presk0@ordi-241026-19:33:05-~/machine 
=> sudo grep -E "3[45]" /etc/iptables/iptables.rules  
-A INPUT -s 134.0.192.0/20 -j logdrop 
-A INPUT -s 35.0.0.0/8 -j logdrop 
-A INPUT -s 34.0.0.0/8 -j logdrop 
-A INPUT -s 35.0.0.0/8 -j logdrop 
-A INPUT -s 34.0.0.0/8 -j logdrop 
-A OUTPUT -d 134.0.192.0/20 -j logdrop 
-A OUTPUT -d 35.0.0.0/8 -j logdrop 
-A OUTPUT -d 34.0.0.0/8 -j logdrop 
-A OUTPUT -d 35.0.0.0/8 -j logdrop 
-A OUTPUT -d 34.0.0.0/8 -j logdrop
